added home folder

--- a/client/1c-formr-net/src/App.css
+++ b/client/1c-formr-net/src/App.css
@@ -18,7 +18,7 @@ h1 {
   SunSans-Regular, sans-serif;
 }
 ul.navbar li {
-  background: lightgrey;
+  background: lightgray;
   margin: 0.5em 0;
   padding: 0.3em;
   border-right: 1em solid darkgoldenrod;
