--- a/home/index.css
+++ b/home/index.css
@@ -2,38 +2,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto Slab');
 
-/*=======================================*/
-/* root REPLACE Point - :root */
 /*-----------------------------------------
 :root selector for variables
 -------------------------------------------*/
 :root {
-    --Header_background-color: #FF7034; /*dark orange*/
-    --Header_hover-color: white;
-    --HeaderLogo-image: url( 'assets/images/formr-logo-blue.gif' );
+    --Header_background-color: whitesmoke; 
+    --Header_hover-color:blue;
+    --HeaderLogo-image: url( 'assets/images/formR-icon.jpg' );
     --HeaderLogo_margin: 0px 0 0 50px;
-    --HeaderList-font-size: 1.2rem;
+    --HeaderList-font-size: 1.1rem;
   
     --Section1_background-color: whitesmoke;
     --Section1_background-image: url( 'assets/images/monaco-blue-soft.jpg' );
+    --Section1Paragraph-font-color: whitesmoke;  
   
     --Section2_background-color: whitesmoke;
-    --Section2Paragraph-font-color: #ff7034;  /* dark orange */
+    --Section2Paragraph-font-color: blue;  
   
-    --Footer_background-color:#FF7034; /*dark orange*/
-    --Footer_hover-color: white;
+    --Footer_background-color:whitesmoke; 
+    --Footer_hover-color: blue;
     --FooterList-font-size: .9rem;  
     
     --GlobalFontFamily: "Roboto Slab", "Frank+Ruhl+Libre:wght@700&display=swap";
 } 
-/* END REPLACE :root =====================*/
 
 
 /*-----------------------------------------
 The <html> tag properites (unchanged)
 ------------------------------------------*/
 html {
-    background: #b3b3b3;
+    background: whitesmoke;
     height: 100%;
     text-align: center;
 }
@@ -63,8 +61,6 @@ h2 {
 }
 
 
-/*=======================================*/
-/* HR-1 REPLACE Point - .Header */
 /*-----------------------------------------
 The .Header properites
 ------------------------------------------*/
@@ -81,9 +77,6 @@ The .Header properites
 /* END HR-1 .Header =====================*/
 
 
-/*===========================================*/
-/* H-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/* H-1 INSERT Point - .HeaderNavBars */
 /*-----------------------------------------
 The .HeaderNavBars (hamburger menu) properites
 ------------------------------------------*/
@@ -100,8 +93,6 @@ The .HeaderNavBars (hamburger menu) properites
     margin-top: 0px;
   }
   
-  /*=======================================*/
-  /* INSERT Point - .HeaderNavBars:focus */
   /*-----------------------------------------
   The .HeaderNavBars:focus properites
   ------------------------------------------*/
@@ -114,7 +105,6 @@ The .HeaderNavBars (hamburger menu) properites
 /*===============================================*/
 /* H-2 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*=======================================*/
-/* H-2 INSERT Point - .HeaderLogo */
 /*-----------------------------------------
 The .HeaderLogo properites
 ------------------------------------------*/
@@ -130,8 +120,6 @@ The .HeaderLogo properites
     font-weight: 600;
   }
   
-  /*=======================================*/
-  /* INSERT Point - .HeaderSpacer */
   /*-----------------------------------------
   The .HeaderSpacer properites
   ------------------------------------------*/
@@ -144,7 +132,6 @@ The .HeaderLogo properites
 /*==============================================*/
 /* H-3 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*========================================*/
-/* H-3 INSERT Point - .HeaderNavList */
 /*-----------------------------------------
 The .HeaderNavList (horizontal menu) properites
 ------------------------------------------*/
@@ -155,10 +142,9 @@ The .HeaderNavList (horizontal menu) properites
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: var(--HeaderList_font-size);
+    font-size: var(--HeaderList-font-size);
 }
 
-/* INSERT Point .HeaderNavListItem a */
 /*-----------------------------------------
 The .HeaderNavListItem a properites
 ------------------------------------------*/
@@ -170,8 +156,6 @@ The .HeaderNavListItem a properites
     padding: 25px;
 }
 
-/* INSERT Point .HeaderNavListItem a:hover
-                .HeaderNavListItem a:active */
 /*-----------------------------------------
 The .HeaderNavListItem a properites
 ------------------------------------------*/
@@ -182,8 +166,6 @@ The .HeaderNavListItem a properites
 /* H-3 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
-/*=======================================*/
-/* H-4 INSERT Point - .HeaderNavListItemCTA a */
 /*-----------------------------------------
 The .HeaderNavListItemCTA a properties
 ------------------------------------------*/
@@ -198,7 +180,6 @@ The .HeaderNavListItemCTA a properties
 
 /*===========================================*/
 /* H-5 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/* H-5 INSERT Point - .HeaderNavListItemCTA */
 /*-----------------------------------------
 The .HeaderNavListItemCTA properties
 ------------------------------------------*/
@@ -206,8 +187,6 @@ The .HeaderNavListItemCTA properties
     animation     : wiggle 400ms 2s 8 ease-out none;
     }
   
-  /*=======================================*/
-  /* INSERT Point - @keyframes wiggle */
   /*-----------------------------------------
   The @keyframes wiggle properties
   ------------------------------------------*/
@@ -219,8 +198,6 @@ The .HeaderNavListItemCTA properties
   /* H-5 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
   
 
-/*=======================================*/
-/* S1R-1 REPLACE Point - Section1 */
 /*-----------------------------------------
 The .Section1 properites
 ------------------------------------------*/
@@ -241,7 +218,6 @@ The .Section1 properites
 /*===========================================*/
 /* S1-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*=======================================*/
-/* S1-1 INSERT Point - .Section1ImageText */
 /*-----------------------------------------
 The .Section1ImageText properties
 ------------------------------------------*/
@@ -250,23 +226,33 @@ The .Section1ImageText properties
     font-weight: bolder;
     color: lightgray;
     text-shadow: 1px 1px 3px #000000;
-    padding: 80px 350px 20px 0px;
+    padding: 40px 450px 20px 0px;
 }
 
-/*=======================================*/
-/* INSERT Point - .Section1ImageText::first-letter */
 /*-----------------------------------------
 The .Section1ImageText::first-letter properties
 ------------------------------------------*/
 .Section1ImageText::first-letter {
     font-size: 150%;
-    color: cornflowerblue;
+    color: whitesmokecornflowerblue;
 }
+
+/*-----------------------------------------
+The .Section1Paragraph properites
+------------------------------------------*/
+.Section1Paragraph {
+  font-family: "Roboto Slab", sans-serif;
+  margin-top: 0px;
+  font-size: 1.3rem;
+  color: var(--Section1Paragraph-font-color); 
+  font-weight: bolder;
+  padding-top: 0rem;
+  padding: 50px 150px 20px 30px;
+}
+
 /* S1-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
-/*=======================================*/
-/* S2R-1 REPLACE Point - Section2 */
 /*-----------------------------------------
 The .Section2 properites
 ------------------------------------------*/
@@ -280,23 +266,17 @@ The .Section2 properites
 /* END S2R-1 .Section2 =====================*/
 
 
-/*=======================================*/
-/* S2-1 INSERT Point - Section2 h2 */
-/*      DELETE Point - Section2 h2 */
 /*-----------------------------------------
 The .Section2 h2 properites
 ------------------------------------------*/
 .Section2 h2 {
     color: black;
     font-size: 1.5rem;
-    padding: 1.5;
+    padding: 5px;
 }
 /* END S2-1 .Section2 h2==================*/
 
 
-/*===========================================*/
-/* S2-2 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/* S2-2 INSERT Point - Section2Paragraph */
 /*-----------------------------------------
 The .Section2Paragraph properites
 ------------------------------------------*/
@@ -304,13 +284,11 @@ The .Section2Paragraph properites
     font-family: "Roboto Slab", sans-serif;
     margin-top: 0px;
     font-size: 1.3rem;
-    color: var(--Section2Paragraph-font-color); /* dark orange*/
+    color: var(--Section2Paragraph-font-color); 
     font-weight: bolder;
-    padding-top: 5rem;
+    padding: 0px 150px 0px 30px;
 }
 
-/*=======================================*/
-/* INSERT Point - Section2Paragraph::firstLetter/line */
 /*-----------------------------------------
 The .Section2Paragraph::firstLetter/line properites
 ------------------------------------------*/
@@ -324,8 +302,6 @@ font-size: 150%;
 /* S2-2 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
-/*=======================================*/
-/* FR-1 REPLACE Point - Footer */
 /*-----------------------------------------
 The .Footer properites
 ------------------------------------------*/
@@ -340,10 +316,6 @@ The .Footer properites
 /* END FR-1 .Footer =====================*/
 
 
-/*=============================================*/
-/* F-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*=======================================*/
-/* F1 INSERT Point - .FooterNavList */
 /*-----------------------------------------
 The .FooterNavList properties
 ------------------------------------------*/
@@ -357,8 +329,6 @@ The .FooterNavList properties
     font-size: var(--FooterList-font-size);
 }
 
-/*=======================================*/
-/* INSERT Point - .FooterNavListItem a */
 /*-----------------------------------------
 The .FooterNavListItem a properties
 ------------------------------------------*/
@@ -370,9 +340,6 @@ The .FooterNavListItem a properties
     padding: 12px;
 }
 
-/*=======================================*/
-/* INSERT Point - .FooterNavListItem a:hover
-                  .FooterNavListItem a:active */
 /*-----------------------------------------
 The .FooterNavListItem a:hover,
     .FooterNavListItem a:active properties
@@ -384,10 +351,7 @@ The .FooterNavListItem a:hover,
 /* F-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
-/*===========================================*/
-/* R-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /* Responsive Code */  
-/* R-1 INSERT Point - @media (responsive max-width)*/ 
 /*-----------------------------------------
 The @media MAX-width query properties
 =========================================*/
