--- a/home/index_final_custom.css
+++ b/home/index_final_custom.css
@@ -1,29 +1,31 @@
 /* Basic Blocks Custom App */
-@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre');
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bookman Old Style');
 
+
+/*=======================================*/
+/* root REPLACE Point - :root */
 /*-----------------------------------------
 :root selector for variables
 -------------------------------------------*/
 :root {
-    --Header_background-color: whitesmoke; 
-    --Header_hover-color:blue;
-    --HeaderLogo-image: url( 'assets/images/formR-icon.jpg' );
-    --HeaderLogo_margin: 0px 0 0 50px;
-    --HeaderList-font-size: 1.1rem;
+    --Header_background-color: #FF7034;
+    --Header_hover-color: white;
+    --HeaderLogo-image: url( 'assets/images/formr-logo-blue.gif' );
+    --HeaderLogo_margin: 0px 0 0 0px;
+    --HeaderList-font-size: 1.2rem;
   
     --Section1_background-color: whitesmoke;
-    --Section1_background-image: url( 'assets/images/monaco-blue-soft-1.jpg' );
-    --Section1Paragraph-font-color: whitesmoke;  
+    --Section1_background-image: url( 'assets/images/monaco-blue-soft.jpg' );
   
-    --Section2-font-color: darkblue;  
     --Section2_background-color: whitesmoke;
-    --Section2Paragraph-font-color: darkblue;  
+    --Section2Paragraph-font-color: #ff7034;  /* dark orange */
   
-    --Footer_background-color:whitesmoke; 
-    --Footer_hover-color: blue;
+    --Footer_background-color:#FF7034;
+    --Footer_hover-color: white;
     --FooterList-font-size: .9rem;  
     
-    --GlobalFontFamily: "Frank+Ruhl+Libre";
+    --GlobalFontFamily: "Bookman Old Style", "Frank+Ruhl+Libre:wght@700&display=swap";
 } 
 
 
@@ -31,7 +33,7 @@
 The <html> tag properites (unchanged)
 ------------------------------------------*/
 html {
-    background: whitesmoke;
+    background: #b3b3b3;
     height: 100%;
     text-align: center;
 }
@@ -41,7 +43,7 @@ html {
 The body properites
 ------------------------------------------*/
 body {
-    background: whitesmoke;
+    background: white;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -58,30 +60,39 @@ h2 {
     color: white;
     padding: 1.5rem;
     text-align: center;
-}
+  }
 
 
+/*=======================================*/
+/* HR-1 REPLACE Point - .Header */
 /*-----------------------------------------
 The .Header properites
 ------------------------------------------*/
 .Header {
     background: var(--Header_background-color);
     width: 100%;
-    height: 10%;
+    height: 100px;
     position: fixed;  /*was relative*/
     z-index: 100;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-/* END HR-1 .Header =====================*/
 
 
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+/*=======================================*/
+/* H-1 INSERT Point - .HeaderNavBars */
 /*-----------------------------------------
 The .HeaderNavBars (hamburger menu) properites
 ------------------------------------------*/
 .HeaderNavBars {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    list-style: none;
     height: 24px;
     width: 24px;
     background: transparent;
@@ -91,47 +102,53 @@ The .HeaderNavBars (hamburger menu) properites
     box-sizing: border-box;
     margin-left: 20px;
     margin-top: 0px;
-  }
-  
-  /*-----------------------------------------
-  The .HeaderNavBars:focus properites
-  ------------------------------------------*/
-  .HeaderNavBars:focus {
-      outline: none;
-  }
-  /* H-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  
+    align-items: center;
+}
 
-/*===============================================*/
-/* H-2 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*=======================================*/
+/* INSERT Point - .HeaderNavBars:focus */
+/*-----------------------------------------
+The .HeaderNavBars:focus properites
+------------------------------------------*/
+.HeaderNavBars:focus {
+    outline: none;
+}
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*=======================================*/
+/* H-2 INSERT Point - .HeaderLogo */
 /*-----------------------------------------
 The .HeaderLogo properites
 ------------------------------------------*/
 .HeaderLogo {
-    width: 224px;
-    height: 64px;
-    margin-bottom: 0px;
-    background-image: var(--HeaderLogo-image);
-    background-size: 224px 64px;
-    background-repeat: no-repeat;
-    margin: var(--HeaderLogo_margin);
-    font-size: 25px;
-    font-weight: 600;
-  }
-  
-  /*-----------------------------------------
-  The .HeaderSpacer properites
-  ------------------------------------------*/
-  .HeaderSpacer {
-      flex: 1;
-  }
-  /* H-2 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  
+  width: 224px;
+  height: 64px;
+  margin-bottom: 0px;
+  background-image: var(--HeaderLogo-image);
+  background-size: 224px 64px;
+  background-repeat: no-repeat;
+  margin: var(--HeaderLogo_margin);
+  font-size: 25px;
+  font-weight: 600;
+}
 
-/*==============================================*/
-/* H-3 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-/*========================================*/
+/*=======================================*/
+/* INSERT Point - .HeaderSpacer */
+/*-----------------------------------------
+The .HeaderSpacer properites
+------------------------------------------*/
+.HeaderSpacer {
+    flex: 1;
+}
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* H-3 INSERT Point - .HeaderNavList */
 /*-----------------------------------------
 The .HeaderNavList (horizontal menu) properites
 ------------------------------------------*/
@@ -142,9 +159,10 @@ The .HeaderNavList (horizontal menu) properites
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: var(--HeaderList-font-size);
+    font-size: var(--HeaderList_font-size);
 }
 
+/* INSERT Point .HeaderNavListItem a */
 /*-----------------------------------------
 The .HeaderNavListItem a properites
 ------------------------------------------*/
@@ -156,6 +174,8 @@ The .HeaderNavListItem a properites
     padding: 25px;
 }
 
+/* INSERT Point .HeaderNavListItem a:hover
+                .HeaderNavListItem a:active */
 /*-----------------------------------------
 The .HeaderNavListItem a properites
 ------------------------------------------*/
@@ -163,9 +183,11 @@ The .HeaderNavListItem a properites
 .HeaderNavListItem a:active {
     color: var(--Header_hover-color);
 }
-/* H-3 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
+/*=======================================*/
+/* H-4 INSERT Point - .HeaderNavListItemCTA a */
 /*-----------------------------------------
 The .HeaderNavListItemCTA a properties
 ------------------------------------------*/
@@ -175,11 +197,11 @@ The .HeaderNavListItemCTA a properties
     padding: 0.5rem 1rem;
     border-radius: 8px;
 }
-/* END H-4 .HeaderNavListItemCTA a ======*/
 
 
 /*===========================================*/
-/* H-5 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* H-5 INSERT Point - .HeaderNavListItemCTA */
 /*-----------------------------------------
 The .HeaderNavListItemCTA properties
 ------------------------------------------*/
@@ -187,6 +209,8 @@ The .HeaderNavListItemCTA properties
     animation     : wiggle 400ms 2s 8 ease-out none;
     }
   
+  /*=======================================*/
+  /* INSERT Point - @keyframes wiggle */
   /*-----------------------------------------
   The @keyframes wiggle properties
   ------------------------------------------*/
@@ -194,30 +218,32 @@ The .HeaderNavListItemCTA properties
       0% { transform: rotateZ(  0deg ); }
      50% { transform: rotateZ(-10deg ); }
     100% { transform: rotateZ( 10deg ); }
-  }
-  /* H-5 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  
+  }  
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
+
+/*=======================================*/
+/* S1R-1 REPLACE Point - Section1 */
 /*-----------------------------------------
-The .Section1 properites
+The .section1 properites
 ------------------------------------------*/
 .Section1 {
-    background: var(--Section1_background-image);
-    background-color: var(--Section1_background-color);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 46%;
-    position: relative;
-    top: 10%;
+  background: var(--Section1_background-image);
+  background-color: var(--Section1_background-color);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 50%;
+  position: relative;
+  top: 100px;
 }
-/* END S1R-1 .Section1 =====================*/
 
 
 /*===========================================*/
-/* S1-1 START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*=======================================*/
+/* S1-1 INSERT Point - .Section1ImageText */
 /*-----------------------------------------
 The .Section1ImageText properties
 ------------------------------------------*/
@@ -226,82 +252,84 @@ The .Section1ImageText properties
     font-weight: bolder;
     color: lightgray;
     text-shadow: 1px 1px 3px #000000;
-    padding: 40px 450px 20px 0px;
+    padding: 80px 350px 20px 0px;
 }
 
+/*=======================================*/
+/* INSERT Point - .Section1ImageText::first-letter */
 /*-----------------------------------------
 The .Section1ImageText::first-letter properties
 ------------------------------------------*/
 .Section1ImageText::first-letter {
     font-size: 150%;
-    color: whitesmokecornflowerblue;
+    color: cornflowerblue;
 }
 
-/*-----------------------------------------
-The .Section1Paragraph properites
-------------------------------------------*/
-.Section1Paragraph {
-  font-family: var(--GlobalFontFamily);
-  margin-top: 0px;
-  font-size: 1.3rem;
-  color: var(--Section1Paragraph-font-color); 
-  font-weight: bolder;
-  padding-top: 0rem;
-  padding: 50px 150px 20px 30px;
-}
-
-/* S1-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
+/*=======================================*/
+/* S2R-1 REPLACE Point - Section2 */
 /*-----------------------------------------
 The .Section2 properites
 ------------------------------------------*/
 .Section2 {
     background: var(--Section2_background-color);
     width: 100%;
-    height: 46%;
+    height: 50%;
     position: relative;
-    color: var(--Section2-font-color);
     top:10%; /*<---ADD to adjust the top position*/
 }
-/* END S2R-1 .Section2 =====================*/
 
 
+/*=======================================*/
+/* S2-1 INSERT Point - Section2 h2 */
+/*      DELETE Point - Section2 h2 */
 /*-----------------------------------------
 The .Section2 h2 properites
 ------------------------------------------*/
 .Section2 h2 {
-    font-size: 1rem;
-    padding: 5px;
+    color: black;
+    font-size: 1.5rem;
+    padding: 1.5;
 }
-/* END S2-1 .Section2 h2==================*/
 
 
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+/*=======================================*/
+/* INSERT Point - Section2Paragraph */
 /*-----------------------------------------
 The .Section2Paragraph properites
 ------------------------------------------*/
 .Section2Paragraph {
-    font-family: var(--GlobalFontFamily);
-    margin-top: 0px;
-    font-size: 1.3rem;
-    font-weight: bolder;
-    padding-top: 0rem;
-    padding: 0px 150px 0px 30px;
+  font-family: "Bookman Old Style", sans-serif;
+  margin-top: 0px;
+  font-size: 1.3rem;
+  color: var(--Section2Paragraph-font-color); /* dark orange*/
+  font-weight: bolder;
+  padding-top: 5rem;
 }
 
+/*=======================================*/
+/* INSERT Point - Section2Paragraph::firstLetter/line */
 /*-----------------------------------------
 The .Section2Paragraph::firstLetter/line properites
 ------------------------------------------*/
 .Section2Paragraph::first-line {
   font-size: 125%;
-}
+  }
   
 .Section2Paragraph::first-letter {
 font-size: 150%;
 }
-/* S2-2 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
+/*=======================================*/
+/* FR-1 REPLACE Point - Footer */
 /*-----------------------------------------
 The .Footer properites
 ------------------------------------------*/
@@ -312,10 +340,13 @@ The .Footer properites
     bottom: 0;
     position: fixed;
     z-index: 99;
-  } 
-/* END FR-1 .Footer =====================*/
+  }  
 
 
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*=======================================*/
+/* F1 INSERT Point - .FooterNavList */
 /*-----------------------------------------
 The .FooterNavList properties
 ------------------------------------------*/
@@ -329,6 +360,8 @@ The .FooterNavList properties
     font-size: var(--FooterList-font-size);
 }
 
+/*=======================================*/
+/* INSERT Point - .FooterNavListItem a */
 /*-----------------------------------------
 The .FooterNavListItem a properties
 ------------------------------------------*/
@@ -340,6 +373,9 @@ The .FooterNavListItem a properties
     padding: 12px;
 }
 
+/*=======================================*/
+/* INSERT Point - .FooterNavListItem a:hover
+                  .FooterNavListItem a:active */
 /*-----------------------------------------
 The .FooterNavListItem a:hover,
     .FooterNavListItem a:active properties
@@ -348,52 +384,52 @@ The .FooterNavListItem a:hover,
 .FooterNavListItem a:active {
   color: var(--Footer_hover-color);
 }
-/* F-1 END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
+
+/*===========================================*/
+/* START BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 /* Responsive Code */  
+/* R-1 INSERT Point - @media (responsive min-width)*/ 
 /*-----------------------------------------
 The @media MIN-width query properties
 =========================================*/
 @media (min-width: 760px) {
-  .HeaderNavBars {
-    display: none;
-  }
-  .HeaderLogo {
-    margin-left: 45px;
-  }
-}
-
-/*-----------------------------------------
-The @media MAX-width query properties
-=========================================*/
-
-@media (max-width: 760px) {
-  .HeaderNavList {
+    .HeaderNavBars {
       display: none;
+    }
+    .HeaderLogo {
+      margin-left: 45px;
+    }
   }
-  .HeaderLogo {
-      font-size: 1rem;
-    }    
-  .Section1ImageText {
-    font-size: 1.5rem;
-    padding: 80px 100px 20px 0px;
+  
+  /*=======================================*/
+  /* INSERT Point - @media (responsive max-width)*/
+  /*-----------------------------------------
+  The @media MAX-width query properties
+  =========================================*/
+  
+  @media (max-width: 760px) {
+    .HeaderNavList {
+        display: none;
+    }
+    .HeaderLogo {
+        font-size: 1rem;
+      }    
+    .Section1ImageText {
+      font-size: 1.5rem;
+      padding: 80px 100px 20px 0px;
+    }
+    .Section2 h2 {
+      font-size: 1.7rem;
+    }
+    .Section2Paragraph {
+      font-size: 75%;
+    }
   }
-  .Section1 h2 {
-    font-size: 1.7rem;
-  }
-  .Section1Paragraph {
-    font-size: 75%;
-  }
-  .Section2 h2 {
-    font-size: 1.7rem;
-  }
-  .Section2Paragraph {
-    font-size: 75%;
-  }
-}
 
 /* END BLOCK ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
 
-/* END CSS */
+/* END */
