Got rid of monaco-blue-soft-1.jpg

--- a/home/index.css
+++ b/home/index.css
@@ -13,7 +13,7 @@
     --HeaderList-font-size: 1.1rem;
   
     --Section1_background-color: cornflowerblue;
-    --Section1_background-image: url( 'assets/images/monaco-blue-soft-1.jpg' );  
+    --Section1_background-image: url( 'assets/images/monaco-blue-soft-1.jpg' ); /* This image existed in Bruce's Repo */ 
     --Section1Paragraph-font-color: whitesmoke;  
   
     --Section2-font-color: darkblue;  
